--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -15,6 +15,10 @@
           href="https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.css" />
     <link rel="stylesheet"
           href="css/app.css" />
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
+
 </head>
 
 <body>
@@ -24,6 +28,8 @@
     </div>
 
     <script src="_framework/blazor.webassembly.js"></script>
+
+    <script src="_content/BlazorStrap/blazorStrap.js"></script>
 </body>
 
 </html>
